feat: compress replays